--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.4.3"
 edition = "2021"
 authors = ["FssAy"]
 readme = "README.md"
+license = "CC-BY-4.0"
 
 [features]
 default = ["async"]
