--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "bqsp"
 version = "0.4.3"
+description = "Presentation layer protocol used to transport data in a fast and efficient manner."
 edition = "2021"
 authors = ["FssAy"]
 readme = "README.md"
+repository = "https://github.com/prty-app/bqsp-rs"
 license = "CC-BY-4.0"
 
 [features]
